# microdata-tools

./: .gitignore  DEPLOYMENT.md  README.md  render.yaml
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py  rate_limit.py
backend/app/schemas/: file_analyzer.py  file_cleaner.py  file_converter.py  file_preview.py
backend/app/services/: data_analyzer.py  data_cleaner.py  data_converter.py  data_normalizer.py  file_exporter.py  file_reader.py
backend/samples/: vendas-analise.csv  vendas-br-normalizacao.csv  vendas-br.csv  vendas-sujas.csv  vendas.csv
backend/tests/: conftest.py  test_config.py  test_data_analyzer.py  test_data_cleaner.py  test_data_converter.py  test_data_normalizer.py  test_docs.py  test_file_exporter.py  test_file_reader.py  test_file_routes.py  test_rate_limit.py
frontend/: .env.example  README.md  next.config.test.ts  next.config.ts  package-lock.json  package.json  vitest.config.ts  vitest.setup.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/donate/: page.tsx
frontend/app/privacy/: page.tsx
frontend/components/: analyze-result-panel.tsx  api-status-badge.tsx  app-header.tsx  clean-result-panel.tsx  convert-result-panel.test.tsx  convert-result-panel.tsx  data-preview-table.tsx  doc-shell.tsx  empty-state.tsx  file-preview.tsx  footer.tsx  hero-section.tsx  panel-ui.tsx  tool-selector.tsx  upload-dropzone.tsx
frontend/lib/: api.test.ts  api.ts
frontend/types/: index.ts
