[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.138.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "python-multipart>=0.0.32",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.19",
]
